# DNS-parser

./: main.py  pyproject.toml
