[tool.poetry]
name = "dns"
version = "0.1.0"
description = ""
authors = ["Rail"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bs4 = "^0.0.1"
selenium = "^4.8.3"
selenium-stealth = "^1.0.6"
requests = "^2.28.2"
webdriver-manager = "^3.8.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
